--- a/swag.yml
+++ b/swag.yml
@@ -17,7 +17,7 @@ services:
       - EMAIL=$ACME_EMAIL
       - MAXMINDDB_LICENSE_KEY=$MMDB_LICENSE
     volumes:
-      - $CONFIG_DIR:/config
+      - swag-config:/config
     ports:
       - 80:80
       - 443:443
@@ -28,4 +28,8 @@ services:
 networks:
   swag-public:
     external: true
-    
+
+volumes:
+  swag-config:
+    external: true
+       
