fixed name of transmission container

--- a/transmission-openvpn.yml
+++ b/transmission-openvpn.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   transmission-openvpn:
     image: haugene/transmission-openvpn:4.0
-    container_name: transmission-openvpn
+    container_name: transmission
     cap_add:
       - NET_ADMIN
     volumes:
@@ -13,7 +13,7 @@ services:
       - OPENVPN_CONFIG=$VPN_CONFIG
       - OPENVPN_USERNAME=$VPN_USER
       - OPENVPN_PASSWORD=$VPN_PWD
-      - LOCAL_NETWORK=$LAN
+      #- LOCAL_NETWORK=$LAN
     logging:
       driver: json-file
       options:
